Styling CSS, still a ways off, but getting a refresher on CSS. Forget older bad ideas, z-index is fine but pseudo is better! Let's GO!

--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ header {
 body{
  background-color: rgba(0,0,0,0.2);
 }
-/* needs to inherit width */
+/* needs to inherit width if using something other than body, so for now... body.*/
 body::before {
   content: "";
   position: fixed;
