--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,7 @@ h2>em {
  /* margin-top: 0.2em; */
  font-size: 4rem;
  word-spacing: 1rem;
+ color: #591264;
 }
 
 h3 {
@@ -84,7 +85,10 @@ h1 {
 }
 
 main>p {
-  font-size: 1.5rem;
+  font-size: 4vw;
+  font-weight: 700;
+  margin-bottom: 15px;
+  color: #591264;
 }
 
 #mg > ul{
@@ -107,7 +111,7 @@ main>p {
   justify-content: space-evenly;
   align-items: center;
   min-width: 250px;
-  max-width: 400px
+  max-width: 400px;
   flex-wrap: wrap;
   border: 2px solid rgba(46, 46, 46, 0.75);
   
@@ -121,4 +125,39 @@ main>p {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+
+#masterData>ul> li {
+    font-size: 3vw;
+    font-weight: 400;
+    margin: 10px 0px;
+    color: #591264;
+}
+
+html body main div#masterData section#usa {
+  display:flex;
+    flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#projects {
+  border-top: 5px dashed rgba(46, 46, 46, 0.75);;
+  margin: 30px 0px;
+}
+
+#projects h3 {
+  font-size: 3vw;
+  font-weight: 400;
+  margin: 15px 0px 10px 0px;
+  color: #591264;
+}
+
+#projects >ul>li {
+  margin: 5px 0px;
+}
+
+ul, li {
+  font-size: 1.25vw;
+  background-color: #8b65501a
 }
